# LLog

./: .env  Cargo.toml  README.md
migrations/2021-08-17-183941_create_workout/: up.sql
migrations/2021-08-26-063912_workout_date/: down.sql  up.sql
migrations/2021-08-27-070526_create_exercises_table/: up.sql
migrations/2021-08-27-195155_create_movements_sets_modifiers_modifier_maps_programs_tables/: down.sql  up.sql
migrations/2021-08-29-135118_remove_modifier_units_type/: down.sql  up.sql
migrations/2021-09-02-181944_remove_exercise_name_column/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/workouts/: mod.rs  models.rs
src/workouts/views/: create.rs  edit.rs  mod.rs
templates/: edit_workout.html  new.html  workout.html
