[package]
name = "llog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.127"
serde_json = "1.0.66"
actix-files = "0.5.0"
env_logger = "0.9.0"
log = "0.4.14"
askama = "0.10"
askama_actix = "0.11.1"
diesel = { version = "1.4.7", features = ["postgres"] }
dotenv = "0.15.0"